# cpp-template

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
test/: CMakeLists.txt  test.cpp
